# spectral-flow

./: INSTALL.md  README.md  pyproject.toml
docs/: math_to_code.md  usage.md
notebooks/: 00_driver.ipynb
runs/sample_run/: config.json  connection_Ahat.npy  continuity.npy  holonomy_P.npy  lambdas.npy  repro_manifest.json
scripts/: run_quick_demo.py
src/spectral_flow_research/: __init__.py  connection.py  connection_highorder.py  eigsolve.py  energy.py  experiment.py  geometry.py  hadamard.py  holonomy.py  laplacian.py  loops.py  math_checks.py  mds.py  reproducibility.py  shapes.py  transport.py  viz.py  viz_utils.py
